# learning_python

./: LICENSE  Makefile
amcli/: .gitignore  Makefile  common.mk  config.yml  createsuperuser.sh  patch_urls.sh  pyproject.toml  pytest.ini  requirements.txt
amcli/admins/: Makefile
amcli/components/: Makefile  admin.mk  dashboard.mk  fixture.mk  importer.mk  init.mk  inline.mk  model.mk  project_urls.mk  schema.mk  serializer.mk  spec.mk  testschema.mk  through.mk  view.mk
amcli/fixtures/: Makefile
amcli/importers/: Makefile
amcli/models/: Makefile
amcli/schema/: Makefile
amcli/serializers/: Makefile
amcli/specs/: Makefile  comment.yml  os.yml  remark.yml
amcli/template/: apps.py.j2  models_init.j2  serializer_fk_parent.j2  test_generated_create.j2  urls.j2
amcli/templates/: admin.py.j2  admin_template.j2  apps.j2  dashboard.py.j2  fixture_template.j2  loader.j2  model_template.j2  names.yaml  project_urls.py.j2  serializer_fk_parent.j2  serializer_m2m_owner.j2  serializer_m2m_target.j2  serializer_normal.j2  serializer_normal_fk.j2  test_generated.j2  test_generated_create.j2  test_generated_delete.j2  test_generated_get.j2  test_generated_update.j2  viewset_template.j2
amcli/tests/: .gitignore  Makefile
amcli/tools/: generate_admin.py  generate_admin_init.py  generate_fixture.py  generate_inline.py  generate_serializer.py  generate_testdata.py  generate_testscript.py  generate_through_model.py  generate_through_spec.py
amcli/unittest/: conftest.py  test_020_genschema.py  test_cmp2ref_comment.py  test_cmp2ref_device.py  test_cmp2ref_ipv4.py  (+4 more)
(+870 files in other folders)
