[project]
name = "amcli"
version = "0.1.0"
description = "Asset Manager Command Line Interface (amcli): Django project generator and code automation toolkit."
authors = [
    { name = "Kojiro", email = "ono.kojiro@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "Django>=5.0",
    "PyYAML>=6.0",
    "Jinja2>=3.1",
    "requests>=2.31",
    "click>=8.1",
]

[project.scripts]
amcli = "amcli.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]


